--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,9 +5,9 @@
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-navigate"></i></div>
             <h3>Join ResearchHub</h3>
-            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Log In with google</button>
+            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Log In with Google</button>
+                <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Log In with Facebook</button>
             </div>
-        </form>
     </div>
 </div>
 <%- include('partials/footer.ejs') %>
