--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,8 +45,15 @@
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+              <a href="../register" class="dropdown-toggle" data-toggle="dropdown"
                 >SIGN IN 
+                <!-- <span class="caret"></span
+              > -->
+			</a>
+			</li>
+			<li>
+			<a href="../login" class="dropdown-toggle" data-toggle="dropdown"
+                >LOGIN 
                 <!-- <span class="caret"></span
               > -->
             </a>
