--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,124 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>ResearchHUB</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-    />
-  </head>
-  <body>
-    <link rel="stylesheet" href="header.css" />
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button
-            type="button"
-            class="navbar-toggle collapsed"
-            data-toggle="collapse"
-            data-target="#bs-megadropdown-tabs"
-          >
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div
-          class="navbar-collapse style= collapse in"
-          id="bs-megadropdown-tabs"
-          style="padding-left: 0px"
-        >
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="#"><i class="fa fa-globe"></i> ResearchHUB</a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-university"></i>xyz</a>
-            </li>
-          </ul>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="find" />
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="../register" class="dropdown-toggle" data-toggle="dropdown"
-                >SIGN IN 
-                <!-- <span class="caret"></span
-              > -->
-			</a>
-			</li>
-			<li>
-			<a href="../login" class="dropdown-toggle" data-toggle="dropdown"
-                >LOGIN 
-                <!-- <span class="caret"></span
-              > -->
-            </a>
-            </li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
-    </nav>
-    <div class="container">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-          <div class="item active">
-            <img
-              src="http://placehold.it/1200x400/16a085/ffffff&text=About Us"
-            />
-          </div>
-          <!-- End Item -->
-          <div class="item">
-            <img
-              src="http://placehold.it/1200x400/e67e22/ffffff&text=Projects"
-            />
-            <div class="carousel-caption">
-              <h3>Headline</h3>
-            </div>
-          </div>
-          <!-- End Item -->
-          <div class="item">
-            <img
-              src="http://placehold.it/1200x400/2980b9/ffffff&text=Portfolio"
-            />
-            <div class="carousel-caption">
-              <h3>Headline</h3>
-            </div>
-          </div>
-          <!-- End Item -->
-          <div class="item">
-            <img
-              src="http://placehold.it/1200x400/8e44ad/ffffff&text=Services"
-            />
-            <div class="carousel-caption">
-              <h3>Headline</h3>
-            </div>
-          </div>
-          <!-- End Item -->
-        </div>
-        <!-- End Carousel Inner -->
-        <ul class="nav nav-pills nav-justified">
-          <li data-target="#myCarousel" data-slide-to="0" class="active">
-            <a href="#">Donations</a>
-          </li>
-          <li data-target="#myCarousel" data-slide-to="1">
-            <a href="#"></a>
-          </li>
-          <li data-target="#myCarousel" data-slide-to="2">
-            <a href="#">Portfolio</a>
-          </li>
-          <li data-target="#myCarousel" data-slide-to="3">
-            <a href="#">Services</a>
-          </li>
-        </ul>
-      </div>
-      <!-- End Carousel -->
-    </div>
-  </body>
-</html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Create a stylish landing page for your business startup and get leads for the offered services with this HTML landing page template.">
+    <meta name="author" content="Inovatik">
+
+    <!-- Website Title -->
+    <title>Research Hub</title>
+    
+    <!-- Styles -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet">
+    <link href="/public/css/bootstrap.css" rel="stylesheet">
+    <link href="/public/css/fontawesome-all.css" rel="stylesheet">
+    <link href="/public/css/swiper.css" rel="stylesheet">
+	<link href="/public/css/magnific-popup.css" rel="stylesheet">
+	<link href="/public/css/styles.css" rel="stylesheet">
+	
+	<!-- Favicon  -->
+    <link rel="icon" href="/public/imgs/favicon.png">
+</head>
