--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -142,7 +142,7 @@ ul {
 	</div>
 	<div class="inner">
 		<div class="prod-left">
-			<h1 class="prod-head"><a href="/"><span style="color:#0f457f">RESEARCH</span>HUB</a></h1>
+			<h1 class="prod-head"><a href="/home"><span style="color:#0f457f">RESEARCH</span>HUB</a></h1>
 			<h4 class="prod-head-sub"></h4>
 		</div>
 		<div class="prod-right">
