--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,9 @@
-<h1>start project</h1>
+<%- include('partials/header.ejs') %>
+<div class="container">
+    <% if (user) {%>
+    <h1>Logged in as <%=user.username%> </h1>
+    <% }else{%>
+    <h1>Not logged in</h1>
+    <%}%>
+</div>
+<%- include('partials/footer.ejs') %>
