--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/header.ejs') %>
 <div class="container">
     <div class="login-clean">
-        <form method="post">
+        <form>
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-navigate"></i></div>
             <h3>Join ResearchHub</h3>
-            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Log In with google</button>
+            <div class="form-group"><a class="btn btn-primary btn-block" href="/auth/google">Login with google</a>
             </div>
         </form>
     </div>
