--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,13 @@
 			class="navbar-toggler"><span class="sr-only">Toggle navigation</span><span
 				class="navbar-toggler-icon"></span></button>
 		<div class="collapse navbar-collapse" id="navcol-1">
-			<ul class="nav navbar-nav mr-auto"></ul><span class="navbar-text actions"><a class="login" href="#">Log
+			<ul class="nav navbar-nav mr-auto"></ul>
+			<%if(!user){%>
+			<span class="navbar-text actions"><a class="login" href="/auth/login">Log
 					In</a></span>
+			<%}else{%>
+			<span class="navbar-text actions"><a class="login" href="/auth/logout">Log
+					Out</a></span>
+			<%}%>
 		</div>
 	</nav>
