donations and event changes in backend

--- a/views/create-event.ejs
+++ b/views/create-event.ejs
@@ -21,7 +21,7 @@
             <div class="container" style="width:30%">
                 <h2>Logged in is <%=user.username%></h2>
                 <div class="contact-clean">
-                    <form method="post" action="/create/new-donation">
+                    <form method="post" action="/create/new-event">
                         <h2 class="text-center">Raise Fund</h2>
                         <div class="form-group"><input type="text" class="form-control" name="title"
                                 placeholder="Title" /></div>
