--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,18 +1,32 @@
 <%- include('partials/header.ejs') %>
 <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-    <div class="container"><a class="navbar-brand" href="#" style="">ResearchHUB</a><button data-toggle="collapse"
-            class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
-                class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="nav navbar-nav mr-auto">
-                <li role="presentation" class="nav-item"></li>
-            </ul>
-            <%if(!user){%>
-            <span class="navbar-text actions"><a class="login" href="/auth/login">Log In</a></span>&nbsp;&nbsp;
-            <%}else{%>
-            <span class="navbar-text actions"><a class="login" href="/auth/logout">Log Out</a></span>
-            <%}%>
+    <a class="navbar-brand" href="#" style="">ResearchHUB</a><button data-toggle="collapse" class="navbar-toggler"
+        data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
+            class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navcol-1">
+        <ul class="nav navbar-nav mr-auto">
+            <li role="presentation" class="nav-item"></li>
+        </ul>
+        <%if(!user){%>
+        <span class="navbar-text actions"><a class="login" href="/auth/login">Log In</a></span>&nbsp;&nbsp;
+        <%}else{%>
+        <span class="navbar-text actions"><a class="login" href="/auth/logout">Log Out</a></span>
+        <%}%>
         </div>
     </div>
 </nav>
-<%- include('partials/footer.ejs') %>
+<!-- Show events -->
+<div class="container">
+    <%events.forEach((event)=>{%>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title"><%=event.title%></h5>
+                <h6 class="card-subtitle mb-2 text-muted">Author: <%=user.username%></h6>
+                <p class="card-text"><%=event.message%>.</p>
+                <a href="#" class="card-link">Volunteer</a>
+            </div>
+        </div>
+        <%})%>
+
+    </div>
+    <%- include('partials/footer.ejs') %>
