event display and pagination

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -83,7 +83,7 @@
                       <% var name = user.username %> 
                       <% var use = name.split(' ')%> 
                       <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: cyan;"><%= use[0]%></a>
+                          <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #00bfd8;"><%= use[0]%></a>
                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <a class="dropdown-item" href="#"><span class="item-text">My Profile</span></a>
                               <div class="dropdown-items-divide-hr"></div>
