--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,32 +1,83 @@
 <%- include('partials/header.ejs') %>
-<nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-    <a class="navbar-brand" href="#" style="">ResearchHUB</a><button data-toggle="collapse" class="navbar-toggler"
-        data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
-            class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navcol-1">
-        <ul class="nav navbar-nav mr-auto">
-            <li role="presentation" class="nav-item"></li>
-        </ul>
-        <%if(!user){%>
-        <span class="navbar-text actions"><a class="login" href="/auth/login">Log In</a></span>&nbsp;&nbsp;
-        <%}else{%>
-        <span class="navbar-text actions"><a class="login" href="/auth/logout">Log Out</a></span>
-        <%}%>
-        </div>
-    </div>
-</nav>
-<!-- Show events -->
-<div class="container">
-    <%events.forEach((event)=>{%>
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title"><%=event.title%></h5>
-                <h6 class="card-subtitle mb-2 text-muted">Author: <%=user.username%></h6>
-                <p class="card-text"><%=event.message%>.</p>
-                <a href="#" class="card-link">Volunteer</a>
-            </div>
-        </div>
-        <%})%>
 
-    </div>
+<!-- Show events -->
+
+
+    <div id="events" class="cards-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12"><br><br><br>
+                    <h2>Petitions Needs your attention</h2>
+                    <p class="p-heading p-large">We've prepared pricing plans for all budgets so you can get started right away. They're great for small companies and large organizations</p>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <%events.forEach((event)=>{%>
+                    <!-- Card-->
+                    <div class="card">
+                       
+                        <div class="card-body">
+                            <div class="card-title">   <% if ( event.title.length >= 30) { %>
+                                <%= event.title.slice(0,29) %>...
+                                <% } else { %>
+                                <%= event.title %>
+                                <% } %></div>
+                           <!-- <div class="card-subtitle">Author: <%=user.username%></div> -->
+                            <hr class="cell-divide-hr">
+                          <!--  <div class="price">
+                                <span class="currency">$</span><span class="value">199</span>
+                                <div class="frequency">monthly</div>
+                            </div> 
+                            <hr class="cell-divide-hr"> -->
+                            <ul class="list-unstyled li-space-lg">
+                                <a href="/show/fullevent">
+                                <li class="media"></li>
+                                <% if ( event.body.length >= 101) { %>
+                                    <%= event.body.slice(0,100) %>...
+                                    <% } else { %>
+                                    <%= event.body %>.
+                                    <% } %></a>
+                                
+                            </ul>
+                            <div class="button-wrapper">
+                                <a class="btn-solid-reg page-scroll" href="#">Donate</a>
+                            </div>
+                        </div>
+                    </div> <!-- end of card -->
+                    <!-- end of card -->
+                    <%})%>
+                    
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <% if (pages > 0) { %>
+                <ul class="pagination text-center" style="text-align: center;">
+                  <% if (current == 1) { %>
+                  <li class="disabled"><a>First</a></li>
+                  <% } else { %>
+                  <li><a href="/show/events/1">First</a></li>
+                  <% } %>
+                  <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
+                  <% if (i !== 1) { %>
+                  <li class="disabled"><a>...</a></li>
+                  <% } %>
+                  <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
+                  <% if (i == current) { %>
+                  <li class="active"><a><%= i %></a></li>
+                  <% } else { %>
+                  <li><a href="/show/events/<%= i %>"><%= i %></a></li>
+                  <% } %>
+                  <% if (i == Number(current) + 4 && i < pages) { %>
+                  <li class="disabled"><a>...</a></li>
+                  <% } %>
+                  <% } %>
+                  <% if (current == pages) { %>
+                  <li class="disabled"><a>Last</a></li>
+                  <% } else { %>
+                  <li><a href="/show/events/<%= pages %>">Last</a></li>
+                  <% } %>
+                </ul>
+                <% } %>
+        </div> <!-- end of container -->
+    </div> 
     <%- include('partials/footer.ejs') %>
