payment and event processes

--- a/views/create-donation.ejs
+++ b/views/create-donation.ejs
@@ -9,6 +9,8 @@
             <div class="form-group"><input type="text" class="form-control" name="title" placeholder="Title" /></div>
             <div class="form-group"><textarea class="form-control" name="message" placeholder="Body"
                     rows="14"></textarea></div>
+            <div class="form-group"><input type="text" class="form-control" name="paymentLink"
+                    placeholder="paytm payment link" /></div>
             <div class="form-group"><button class="btn btn-primary" type="submit">Submit </button></div>
         </form>
     </div>
