--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,28 +4,27 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="footer-col">
-                    <h4>About Evolo</h4>
-                    <p>We're passionate about offering some of the best business growth services for startups</p>
+                    <h4></h4>
                 </div>
             </div> <!-- end of col -->
             <div class="col-md-4">
                 <div class="footer-col middle">
-                    <h4>Important Links</h4>
+                    <h4></h4>
                     <ul class="list-unstyled li-space-lg">
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">Our business partners <a class="turquoise" href="#your-link">startupguide.com</a></div>
+                            <div class="media-body"><a class="turquoise" href="#your-link"></a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">Read our <a class="turquoise" href="terms-conditions.html">Terms & Conditions</a>, <a class="turquoise" href="privacy-policy.html">Privacy Policy</a></div>
+                            <div class="media-body"Read our <a class="turquoise" href="terms-conditions.html"></a>, <a class="turquoise" href="privacy-policy.html"></a></div>
                         </li>
                     </ul>
                 </div>
             </div> <!-- end of col -->
             <div class="col-md-4">
                 <div class="footer-col last">
-                    <h4>Social Media</h4>
+                    <h4></h4>
                     <span class="fa-stack">
                         <a href="#your-link">
                             <i class="fas fa-circle fa-stack-2x"></i>
@@ -69,7 +68,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Inovatik</a> - All rights reserved</p>
+                <p class="p-small">Copyright © 2020 <a href="#">ResearchHUB</a> - All rights reserved</p>
             </div> <!-- end of col -->
         </div> <!-- enf of row -->
     </div> <!-- end of container -->
