--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,7 +59,7 @@
                   <a class="nav-link page-scroll" href="/show/events/1">Events</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link page-scroll" href="/show/donations">Volunteers</a>
+                  <a class="nav-link page-scroll" href="/show/donations">Donations</a>
               </li>
             <!--  <li class="nav-item">
                   <a class="nav-link page-scroll" href="#request">Request</a>
