--- a/views/fulldonation.ejs
+++ b/views/fulldonation.ejs
@@ -185,14 +185,14 @@ footer a {
         </div> -->
         <div class="details">
             <div class="content">
-                <h2><%= events.title%><br>
+                <h2><%= donation.title%><br>
                     <span>Running Collection</span>
                 </h2>
                 <p>
-                    <%= events.body%>
+                    <%= donation.body%>
                 </p>
                
-                <button href="#">Volunteer</button>
+                <button href="#">Donate Now</button>
             </div>
         </div>
     </div>
