--- a/views/create-event.ejs
+++ b/views/create-event.ejs
@@ -82,8 +82,7 @@
 </div> <!-- end of form-1 -->
 <!-- end of request -->
 <%}else{%>
-<h1>Please Login to create a new Donation</h1>
+<h1>Please Login to add yourself as Volunteer</h1>
 <%}%>
 
-<%- include('partials/footer.ejs') %>
 <%- include('partials/footer.ejs') %>
