--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,11 +36,8 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-        <!-- Text Logo - Use this if you don't have a graphic logo -->
-        <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Evolo</a> -->
-
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="/"></a>
+        <a class="navbar-brand" href="/">R-HUB</a>
 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -61,22 +58,6 @@
               <li class="nav-item">
                   <a class="nav-link page-scroll" href="/show/donations">Donations</a>
               </li>
-            <!--  <li class="nav-item">
-                  <a class="nav-link page-scroll" href="#request">Request</a>
-              </li>  -->
-
-              <!-- Dropdown Menu -->          
-             <!-- <li class="nav-item dropdown">
-                  <a class="nav-link page-scroll" href="/about">About</a>
-                  <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Terms Conditions</span></a>
-                      <div class="dropdown-items-divide-hr"></div>
-                      <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Privacy Policy</span></a>
-                  </div>
-              </li> -->
-              <!-- end of dropdown menu --> 
-
               <li class="nav-item">
                   <a class="nav-link page-scroll" href="/contact">Contact</a>
               </li>
@@ -97,20 +78,5 @@
                     <a class="nav-link page-scroll" href="/auth/login">Log In</a></li>
                 <%}%>
           </ul>
-       <!--   <span class="nav-item social-icons">
-              <span class="fa-stack">
-                  <a href="#your-link">
-                      <i class="fas fa-circle fa-stack-2x facebook"></i>
-                      <i class="fab fa-facebook-f fa-stack-1x"></i>
-                  </a>
-              </span>
-              <span class="fa-stack">
-                  <a href="#your-link">
-                      <i class="fas fa-circle fa-stack-2x twitter"></i>
-                      <i class="fab fa-twitter fa-stack-1x"></i>
-                  </a>
-              </span>
-          </span> -->
       </div>
-  </nav> <!-- end of navbar -->
-  <!-- end of navigation -->
+  </nav> 
