--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,19 +9,19 @@
                 <h2>Contact Information</h2>
                 <ul class="list-unstyled li-space-lg">
                     <li class="address">Don't hesitate to give us a call or send us a contact form message</li>
-                    <li><i class="fas fa-map-marker-alt"></i>22 Innovative Area, San Francisco, CA 94043, US</li>
-                    <li><i class="fas fa-phone"></i><a class="turquoise" href="tel:003024630820">+81 720 2212</a></li>
-                    <li><i class="fas fa-envelope"></i><a class="turquoise" href="mailto:office@evolo.com">office@evolo.com</a></li>
+                    <li><i class="fas fa-phone"></i><a class="turquoise" href="tel:917651842669">Phone Call</a></li>
+                    <li><i class="fas fa-envelope"></i><a class="turquoise" href="mailto:samarthasthana110@gmail.com">Gmail</a></li>
                 </ul>
             </div> <!-- end of col -->
         </div> <!-- end of row -->
         <div class="row">
-            <div class="col-lg-6">
-                <div class="map-responsive">
+            <div class="col-lg-4">
+               <!--  <div class="map-responsive">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100939.98555098464!2d-122.507640204439!3d37.757814996609724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sro!4v1498231462606" allowfullscreen></iframe>
-                </div>
-            </div> <!-- end of col -->
-            <div class="col-lg-6">
+                </div> -->
+            </div>
+          
+            <div class="col-lg-4">
                 
                 <!-- Contact Form -->
                 <form method="POST" action="/contact" id="contact-form">
@@ -41,7 +41,7 @@
                         <div class="help-block with-errors"></div>
                     </div>
                     <div class="form-group checkbox">
-                        <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>I have read and agree with Evolo's stated <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-conditions.html">Terms Conditions</a> 
+                        <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>I have read and agree with Evolo's stated <a href="#">Privacy Policy</a> and <a href="#">Terms Conditions</a> 
                         <div class="help-block with-errors"></div>
                     </div>
                     <div class="form-group">
@@ -54,6 +54,9 @@
                 <!-- end of contact form -->
 
             </div> <!-- end of col -->
+            <div class="col-lg-4">
+
+            </div>
         </div> <!-- end of row -->
     </div> <!-- end of container -->
 </div> <!-- end of form-2 -->
