--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -75,7 +75,7 @@
 
                 <% }else{%>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="/auth/login">Log In</a></li>
+                    <a class="nav-link page-scroll" href="/auth/google">Log In</a></li>
                 <%}%>
           </ul>
       </div>
