--- a/views/index.ejs
+++ b/views/index.ejs
@@ -310,19 +310,19 @@
                         <div class="image-wrapper">
                             <img class="img-fluid" src="/public/imgs/team-member-1.svg" alt="alternative">
                         </div> <!-- end of image-wrapper -->
-                        <p class="p-large"><strong>Lacy Whitelong</strong></p>
-                        <p class="job-title">Business Developer</p>
+                        <p class="p-large"><strong>Ritika Jaiswal</strong></p>
+                       <!-- <p class="job-title">Business Developer</p> -->
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.linkedin.com/in/ritika-jaiswal-830526198/">
                                     <i class="fas fa-circle fa-stack-2x facebook"></i>
-                                    <i class="fab fa-facebook-f fa-stack-1x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://github.com/ritika-0111">
                                     <i class="fas fa-circle fa-stack-2x twitter"></i>
-                                    <i class="fab fa-twitter fa-stack-1x"></i>
+                                    <i class="fab fa-github fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -334,19 +334,18 @@
                         <div class="image-wrapper">
                             <img class="img-fluid" src="/public/imgs/team-member-2.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Chris Brown</strong></p>
-                        <p class="job-title">Online Marketer</p>
+                        <p class="p-large"><strong>Rahil Rehan</strong></p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.linkedin.com/in/rahil-rehan-39849a14b/">
                                     <i class="fas fa-circle fa-stack-2x facebook"></i>
-                                    <i class="fab fa-facebook-f fa-stack-1x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://github.com/RahilRehan">
                                     <i class="fas fa-circle fa-stack-2x twitter"></i>
-                                    <i class="fab fa-twitter fa-stack-1x"></i>
+                                    <i class="fab fa-github fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -358,19 +357,18 @@
                         <div class="image-wrapper">
                             <img class="img-fluid" src="/public/imgs/team-member-3.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Sheila Zimerman</strong></p>
-                        <p class="job-title">Software Engineer</p>
+                        <p class="p-large"><strong>Samarth Asthana</strong></p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.linkedin.com/in/samarth-asthana-06857612b">
                                     <i class="fas fa-circle fa-stack-2x facebook"></i>
-                                    <i class="fab fa-facebook-f fa-stack-1x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://github.com/samarth-asthana">
                                     <i class="fas fa-circle fa-stack-2x twitter"></i>
-                                    <i class="fab fa-twitter fa-stack-1x"></i>
+                                    <i class="fab fa-github fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -382,19 +380,18 @@
                         <div class="image-wrapper">
                             <img class="img-fluid" src="/public/imgs/team-member-4.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Mary Villalonga</strong></p>
-                        <p class="job-title">Product Manager</p>
+                        <p class="p-large"><strong>Manuel Stefan Christopher</strong></p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.linkedin.com/in/manuel-stefan-christopher/">
                                     <i class="fas fa-circle fa-stack-2x facebook"></i>
-                                    <i class="fab fa-facebook-f fa-stack-1x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://github.com/manuelstefan150">
                                     <i class="fas fa-circle fa-stack-2x twitter"></i>
-                                    <i class="fab fa-twitter fa-stack-1x"></i>
+                                    <i class="fab fa-github fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
