--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -69,6 +69,8 @@
                     <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button"
                         aria-haspopup="true" aria-expanded="false" style="color: #00bfd8;"><%= use[0]%></a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/"><span class="item-text">Home</span></a>
+                        <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="/create/new-event"><span class="item-text">Create
                                 Event</span></a>
                         <a class="dropdown-item" href="/create/new-donation"><span class="item-text">Post
