--- a/views/donations.ejs
+++ b/views/donations.ejs
@@ -1,56 +1,50 @@
+<%- include('partials/header.ejs') %>
 
-    <%- include('partials/header.ejs') %>
+<!-- Show events -->
 
-    <!-- Show events -->
-    
-        <div id="events" class="cards-2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12"><br><br><br>
-                        <h2>Petitions Needs your attention</h2>
-                        <p class="p-heading p-large">We've prepared pricing plans for all budgets so you can get started right away. They're great for small companies and large organizations</p>
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <%donations.forEach((donation)=>{%>
-                        <!-- Card-->
-                        <div class="card">
-                           
-                            <div class="card-body">
-                                <div class="card-title">   <% if ( donation.title.length >= 30) { %>
-                                    <%= donation.title.slice(0,29) %>...
-                                    <% } else { %>
-                                    <%= donation.title %>
-                                    <% } %></div>
-                               <!-- <div class="card-subtitle">Author: <%=user.username%></div> -->
-                                <hr class="cell-divide-hr">
-                              <!--  <div class="price">
-                                    <span class="currency">$</span><span class="value">199</span>
-                                    <div class="frequency">monthly</div>
-                                </div> 
-                                <hr class="cell-divide-hr"> -->
-                                <ul class="list-unstyled li-space-lg">
-                                    <a href="/show/fullinfo/<%= donation.id %>">
-                                    <li class="media"></li>
-                                    <% if ( donation.body.length >= 101) { %>
-                                        <%= donation.body.slice(0,100) %>...
-                                        <% } else { %>
-                                        <%= donation.body %>.
-                                        <% } %></a>
-                                    
-                                </ul>
-                                <div class="button-wrapper">
-                                    <a class="btn-solid-reg page-scroll" href="#">Donate now</a>
-                                </div>
-                            </div>
-                        </div> <!-- end of card -->
-                        <!-- end of card -->
-                        <%})%>
-                        
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-      
-            </div> <!-- end of container -->
-        </div> 
-        <%- include('partials/footer.ejs') %>
+<div id="events" class="cards-2">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12"><br><br><br>
+                <h2>Help Researcher by funding thier dream project</h2>
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <%donations.forEach((donation)=>{%>
+                <!-- Card-->
+                <div class="card">
+
+                    <div class="card-body">
+                        <div class="card-title"> <% if ( donation.title.length >= 30) { %>
+                            <%= donation.title.slice(0,29) %>...
+                            <% } else { %>
+                            <%= donation.title %>
+                            <% } %></div>
+                        <hr class="cell-divide-hr">
+                        <ul class="list-unstyled li-space-lg">
+                            <a href="/show/fullinfo/<%= donation.id %>">
+                                <li class="media"></li>
+                                <% if ( donation.body.length >= 101) { %>
+                                <%= donation.body.slice(0,100) %>...
+                                <% } else { %>
+                                <%= donation.body %>.
+                                <% } %>
+                            </a>
+
+                        </ul>
+                        <div class="button-wrapper">
+                            <a class="btn-solid-reg page-scroll" href=<%=donation.paymentLink%> target="__blank">Donate
+                                now</a>
+                        </div>
+                    </div>
+                </div> <!-- end of card -->
+                <!-- end of card -->
+                <%})%>
+
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+
+    </div> <!-- end of container -->
+</div>
+<%- include('partials/footer.ejs') %>
