--- a/views/index.ejs
+++ b/views/index.ejs
@@ -358,6 +358,7 @@
                             <img class="img-fluid" src="/public/imgs/team-member-2.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Samarth Asthana</strong></p>
+                        <p class="job-title">Frontend Developer</p>
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href="https://www.linkedin.com/in/samarth-asthana-06857612b">
@@ -378,7 +379,8 @@
                         <div class="image-wrapper">
                             <img class="img-fluid" src="/public/imgs/team-member-2.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Manuel Stefan Christopher</strong></p>
+                        <p class="p-large"><strong>Manuel Stefan</strong></p>
+                        <p class="job-title">Content Creator</p>
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href="https://www.linkedin.com/in/manuel-stefan-christopher/">
@@ -395,11 +397,11 @@
                         </span> <!-- end of social-icons -->
                     </div> <!-- end of team-member -->
                     
-                         <div class="team-member">
+                   <!--      <div class="team-member">
                         <div class="image-wrapper">
                             <img class="img-fluid" src="/public/imgs/team-member-2.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Michael</strong></p>
+                     <!--   <p class="p-large"><strong>Michael</strong></p>
                         <p class="job-title">Developer</p>
                         <span class="social-icons">
                             <span class="fa-stack">
@@ -414,8 +416,8 @@
                                     <i class="fab fa-twitter fa-stack-1x"></i>
                                 </a>
                             </span>
-                        </span> <!-- end of social-icons -->
-                    </div> <!-- end of team-membe
+                        </span> end of social-icons
+                    </div> --> <!-- end of team-member -->
                     
 
                 </div> <!-- end of col -->
