--- a/views/create-donation.ejs
+++ b/views/create-donation.ejs
@@ -42,7 +42,7 @@
 
                             <div class="help-block with-errors"></div>
                         </div>
-                </div> -->
+                </div> 
                 <div class="form-group checkbox">
                     <input type="checkbox" id="rterms" value="Agreed-to-Terms" name="rterms" required>I agree with
                     Evolo's stated <a href="privacy-policy.html">Privacy Policy</a> and <a
