--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,7 +37,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <!-- Image Logo -->
-        <a class="navbar-brand" href="/">R-HUB</a>
+        <button class="navbar-brand" href="/" style="color: black;">R-HUB</button>
 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
